добавил треугольник и иконки футера

--- a/index.html
+++ b/index.html
@@ -13,44 +13,43 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="header_left_column">
-        <a href="index.html">
-          <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Лого">
-        </a>
-        <h1 class="header_title">Научиться учиться</h1>
-        <p class="header_subtitle">Какие современные и эффективные подходы
+      <div class="header__left_column">
+          <img class="logo logo__place_header" src="images/logo_place_header.svg" alt="Лого">
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы
           к обучению вы можете использовать в
           своей жизни?
-          <a href="#" class="header-link">Узнать</a>
+          <a href="#" class="header__link header__arrow">Узнать</a>
         </p>
       </div>
-      <div class="header_right_column">
+      <div class="header__right_column">
         <div>
-          <img class="header_main_illustration" src="images/header-image.png" alt="Главная пикча">
+          <img class="header__main_illustration" src="images/header-image.png" alt="Главная пикча">
         </div>
         <div class="header__square-pic"></div>
       </div>
     </header>
     <main class="content">
+
       <section class="description">
-        <div class="two-columns">
-          <div class="two-columns-left">
-            <p class="two-columns_brief">
+        <div class="description__two_columns">
+          <div class="description__two_columns_left">
+            <p class="description__two_columns_brief">
               Главные проблемы в обучении
             </p>
           </div>
-          <div class="two-columns_main-text">
-            <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
+          <div class="description__two_columns_main-text">
+            <p class="description__two_columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать
               материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест,
               но часто в итоге это не дает нам реального знания.
               Зубрежка быстро выветривается и не приносит пользы.
             </p>
-            <p class="two-columns_paragraph paragraph_margin"><span class="span_accent">Вывод:</span> учиться тоже нужно
+            <p class="description__two_columns_paragraph paragraph_margin"><span class="span_accent">Вывод:</span> учиться тоже нужно
               уметь, но почему-то этому мало где учат.
               Что с этим делать?
             </p>
-            <p class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
+            <p class="description__two_columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим.
               Эти же техники применяются на примере обучения в Практикуме.
             </p>
@@ -96,14 +95,14 @@
             <h4 class="table_heading">1889 год</h4>
             <p class="table_text">Открытие условного рефлекса</p>
           </div>
+
         </div>
       </section>
 
       <section class="feynman">
-        <h2 class="feynman_title">Метод Фейнмана</h2>
-        <h3 class="feynman_subtitle">Выучить и не забыть</h3>
-        <a class="feynman-link" href="#">Подробнее</a>
-        <img class="feynman-image" src="images/feynman.png" alt="Фейман">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
+        <a class="feynman__link feynman__arrow" href="#">Подробнее</a>
       </section>
 
       <section class="kaufman">
@@ -154,27 +153,25 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-columns">
-        <div class="footer-columns_content_copyright">
-          <a href="index.html">
-            <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип">
-          </a>
-          <p class="footer_author">&copy; 2022. Alex Anshakov</p>
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+            <img class="logo logo__place_footer" src="images/logo_place_footer.svg" alt="Логотип">
+          <p class="footer__author">&copy; 2022. Alex Anshakov</p>
         </div>
-        <div class="footer-columns_content_info">
-          <ul class="footer_list">
-            <li class="footer-link footer-heading"><a class="footer-column_link" href="#">О Практикуме</a></li>
-            <li class="footer-link"><a class="footer-column_link" href="#">Главная</a></li>
-            <li class="footer-link"><a class="footer-column_link" href="#">Концепция</a></li>
-            <li class="footer-link"><a class="footer-column_link" href="#">Наставники</a></li>
+        <div class="footer__columns_content_info">
+          <ul class="footer__list">
+            <li class="footer__link footer__heading"><a class="footer__column_link" href="#">О Практикуме</a></li>
+            <li class="footer__link"><a class="footer__column_link" href="#">Главная</a></li>
+            <li class="footer__link"><a class="footer__column_link" href="#">Концепция</a></li>
+            <li class="footer__link"><a class="footer__column_link" href="#">Наставники</a></li>
           </ul>
         </div>
-        <div class="footer-columns_content_social">
-          <ul class="footer_list">
-            <li class="footer-link footer-heading"><a class="footer-column_link" href="#">Соцсети</a></li>
-            <li class="footer-link"><a class="footer-column_link" href="#">Facebook</a></li>
-            <li class="footer-link"><a class="footer-column_link" href="#">Вконтакте</a></li>
-            <li class="footer-link"><a class="footer-column_link" href="#">Instagram</a></li>
+        <div class="footer__columns_content_social">
+          <ul class="footer__list">
+            <li class="footer__link footer__heading"><a class="footer__column_link" href="#">Соцсети</a></li>
+            <li class="footer__link"><a class="footer__column_link" href="#"><img class="footer__social_icon social_icon_face" src="images/facebook_color_white.svg" alt="Фейсбук">Facebook</a></li>
+            <li class="footer__link"><a class="footer__column_link" href="#"><img class="footer__social_icon social_icon_vk" src="images/vk_color_white.svg" alt="Вконтакте">Вконтакте</a></li>
+            <li class="footer__link"><a class="footer__column_link" href="#"><img class="footer__social_icon social_icon_inst" src="images/instagram_color_white.svg" alt="Инстаграм">Instagram</a></li>
           </ul>
         </div>
       </div>
